examples/test/testpolicy6175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6175
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key33: value42
      key44: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value17
      podSelector:
        matchLabels:
          key21: value12
          key8: value18
